# tauricord

./: .gitignore  Cargo.toml  PKGBUILD  README.md  build.rs  io.tauricord.yml  libdbusmenu-valgrind.patch  tauri.conf.json
.github/workflows/: build-appimage-experimental.yml  build-flatpak.yml  build-linux.yml  build-windows.yml  create-release.yml  release.yml
assets/: index.html  io.tauricord.dev.desktop
capabilities/: default.json
src/: lib.rs  main.rs
