[package]
name = "Tauricord"
version = "0.3.0"
description = "A lightweight desktop wrapper for the Discord Web App, built using Tauri. This application offers the full Discord experience with the performance and resource efficiency of a native app. It leverages the web version of Discord while providing native windowing, system tray support, and better OS integration without the bloat of Electron."
authors = ["Tauricord"]
license = "Unlicense"
repository = "n/a"
edition = "2024"
rust-version = "1.87.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.2.0", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.5.0", features = [] }
tauri-plugin-log = "2.0.0-rc"
tauri-plugin-fs = "2"
tauri-plugin-dialog = "2"
